// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildInfo snapshot tests renders "builds" properly 1`] = `
<div>
  <div>
    <div
      class="main gitInfo1"
    >
      <span
        class="greyBox"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon StyledProps--color StyledProps--color-grey500"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="branchName"
        >
          master
        </span>
      </span>
      <span
        class="greyBox"
      >
        <span
          class="bp3-icon bp3-icon-git-commit StyledProps--main greyBoxIcon StyledProps--color StyledProps--color-grey500"
          icon="git-commit"
        >
          <svg
            data-icon="git-commit"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-commit
            </desc>
            <path
              d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        1234567
      </span>
    </div>
    <div
      class="gitInfo2"
    >
      <span
        color="grey500"
      >
        execution.latestCommit
      </span>
      <p
        class="StyledProps--font StyledProps--main ellipsis commitOrPrTitle"
      >
        Message ...
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <a
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
            href="javascript:void()"
            role="button"
            tabindex="0"
          >
            <span
              class="bp3-button-text"
            >
              <span
                class="moreBox"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main StyledProps--color StyledProps--color-grey500"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="10"
                    viewBox="0 0 16 16"
                    width="10"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </a>
        </span>
      </span>
      <a
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
        href="javascript:void()"
        role="button"
        tabindex="0"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500"
            data-icon="main-chevron-up"
          >
            <svg
              height="14"
              viewBox="0 0 14 8"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 6.3l-6-6C7.5.1 7.3 0 7 0s-.5.1-.7.3l-6 6c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3L7 2.4l5.3 5.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`BuildInfo snapshot tests renders "builds" properly 2`] = `
<div>
  <div>
    <div
      class="main gitInfo1"
    >
      <span
        class="greyBox"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon StyledProps--color StyledProps--color-grey500"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="branchName"
        >
          master
        </span>
      </span>
      <span
        class="greyBox"
      >
        <span
          class="bp3-icon bp3-icon-git-commit StyledProps--main greyBoxIcon StyledProps--color StyledProps--color-grey500"
          icon="git-commit"
        >
          <svg
            data-icon="git-commit"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-commit
            </desc>
            <path
              d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        1234567
      </span>
    </div>
    <div
      class="gitInfo2"
    >
      <span
        color="grey500"
      >
        execution.latestCommit
      </span>
      <p
        class="StyledProps--font StyledProps--main ellipsis commitOrPrTitle"
      >
        Message ...
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <a
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
            href="javascript:void()"
            role="button"
            tabindex="0"
          >
            <span
              class="bp3-button-text"
            >
              <span
                class="moreBox"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main StyledProps--color StyledProps--color-grey500"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="10"
                    viewBox="0 0 16 16"
                    width="10"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </a>
        </span>
      </span>
      <a
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
        href="javascript:void()"
        role="button"
        tabindex="0"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500"
            data-icon="main-chevron-down"
          >
            <svg
              height="14"
              viewBox="0 0 14 8"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`BuildInfo snapshot tests renders "pullRequest" properly 1`] = `
<div>
  <div>
    <div
      class="main gitInfo1"
    >
      <span
        class="greyBox"
      >
        <span
          class="ellipsis sourceRepo"
        >
          source-repo
        </span>
        <span
          class="greyBoxDelimiter"
        />
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="ellipsis sourceBranch"
        >
          source-branch
        </span>
      </span>
      <span
        class="bp3-icon bp3-icon-arrow-right StyledProps--main sourceTargetArrow"
        icon="arrow-right"
      >
        <svg
          data-icon="arrow-right"
          height="12"
          viewBox="0 0 16 16"
          width="12"
        >
          <desc>
            arrow-right
          </desc>
          <path
            d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="greyBox"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="ellipsis targetBranch"
        >
          target-branch
        </span>
      </span>
    </div>
    <div
      class="gitInfo2"
    >
      <p
        class="StyledProps--font StyledProps--main ellipsis commitOrPrTitle"
      >
        Title
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <a
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
            href="javascript:void()"
            role="button"
            tabindex="0"
          >
            <span
              class="bp3-button-text"
            >
              <span
                class="moreBox"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main StyledProps--color StyledProps--color-grey500"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="10"
                    viewBox="0 0 16 16"
                    width="10"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </a>
        </span>
      </span>
      <a
        class="bp3-button Button--button StyledProps--font StyledProps--main prNumber Button--with-current-color Button--link"
        href="link"
        rel="noreferrer noopener"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp3-button-text"
        >
          execution.prSymbol
           
          5
        </span>
      </a>
      <span
        class="pullRequestStatus"
      >
        OPEN
      </span>
      <a
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
        href="javascript:void()"
        role="button"
        tabindex="0"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500"
            data-icon="main-chevron-up"
          >
            <svg
              height="14"
              viewBox="0 0 14 8"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 6.3l-6-6C7.5.1 7.3 0 7 0s-.5.1-.7.3l-6 6c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3L7 2.4l5.3 5.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`BuildInfo snapshot tests renders "pullRequest" properly 2`] = `
<div>
  <div>
    <div
      class="main gitInfo1"
    >
      <span
        class="greyBox"
      >
        <span
          class="ellipsis sourceRepo"
        >
          source-repo
        </span>
        <span
          class="greyBoxDelimiter"
        />
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="ellipsis sourceBranch"
        >
          source-branch
        </span>
      </span>
      <span
        class="bp3-icon bp3-icon-arrow-right StyledProps--main sourceTargetArrow"
        icon="arrow-right"
      >
        <svg
          data-icon="arrow-right"
          height="12"
          viewBox="0 0 16 16"
          width="12"
        >
          <desc>
            arrow-right
          </desc>
          <path
            d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="greyBox"
      >
        <span
          class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon"
          icon="git-branch"
        >
          <svg
            data-icon="git-branch"
            height="10"
            viewBox="0 0 16 16"
            width="10"
          >
            <desc>
              git-branch
            </desc>
            <path
              d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="ellipsis targetBranch"
        >
          target-branch
        </span>
      </span>
    </div>
    <div
      class="gitInfo2"
    >
      <p
        class="StyledProps--font StyledProps--main ellipsis commitOrPrTitle"
      >
        Title
      </p>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <a
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
            href="javascript:void()"
            role="button"
            tabindex="0"
          >
            <span
              class="bp3-button-text"
            >
              <span
                class="moreBox"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main StyledProps--color StyledProps--color-grey500"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="10"
                    viewBox="0 0 16 16"
                    width="10"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </a>
        </span>
      </span>
      <a
        class="bp3-button Button--button StyledProps--font StyledProps--main prNumber Button--with-current-color Button--link"
        href="link"
        rel="noreferrer noopener"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp3-button-text"
        >
          execution.prSymbol
           
          5
        </span>
      </a>
      <span
        class="pullRequestStatus"
      >
        OPEN
      </span>
      <a
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
        href="javascript:void()"
        role="button"
        tabindex="0"
      >
        <span
          class="bp3-button-text"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500"
            data-icon="main-chevron-down"
          >
            <svg
              height="14"
              viewBox="0 0 14 8"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;
